fix overflow

--- a/clock-app/public/style.css
+++ b/clock-app/public/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    height: 100vh;
+    height: 100dvh;
     font-family: "Inter", sans-serif;
     background-color: #000000;
     color: #FFFFFF;
@@ -15,6 +15,7 @@ body {
     background-size: cover;
     background-position: top center;
     position: relative;
+    overflow: hidden;
 }
 
 main {
